Refactor reactions file collection to use Stream.toList() for improved readability